--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -4,7 +4,7 @@
 // Font path is used to include ionicons,
 // roboto, and noto sans fonts
 $font-path: "../assets/fonts";
-
+$grid-columns:1000;
 
 // The app direction is used to include
 // rtl styles in your app. For more info, please see:
@@ -86,3 +86,5 @@ $colors: (
 
 @import "roboto";
 @import "noto-sans";
+
+
